# Agentic_AI_Researcher

./: README.md  ai_researcher.py  ai_researcher_2.py  frontend.py  pyproject.toml  read_pdf.py  threads.db
output/: paper_20250917_112925.tex
